--- a/src/kovacevic/view/FormaRad.form
+++ b/src/kovacevic/view/FormaRad.form
@@ -33,7 +33,7 @@
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jScrollPane3" pref="0" max="32767" attributes="0"/>
+                      <Component id="jScrollPane3" pref="382" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="103" alignment="0" groupAlignment="0" attributes="0">
@@ -66,24 +66,35 @@
                               <Component id="btnObrisi" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="txtIdValue" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
-                          <Component id="cmbGrupeRadova" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="txtTratziGrupa" min="-2" pref="100" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="txtTraziKategorija" min="-2" pref="100" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="txtTraziCijena" min="-2" pref="104" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnResetirajTrazilicu" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="350" max="32767" attributes="0"/>
-                  </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="lblPretraga" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="btnUpute" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="cmbGrupeRadova" alignment="0" min="-2" pref="99" max="-2" attributes="0"/>
+                          <Component id="lblPretraga" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="txtTraziKategorija" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Component id="lblPretraga1" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="txtTraziCijena" alignment="0" min="-2" pref="104" max="-2" attributes="0"/>
+                          <Component id="lblPretraga2" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnUpute" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="btnResetirajTrazilicu" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                      </Group>
                   </Group>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -93,21 +104,30 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lblPretraga" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnUpute" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                      <Component id="btnUpute" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lblPretraga1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblPretraga2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblPretraga" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtTratziGrupa" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtTraziKategorija" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtTraziCijena" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnResetirajTrazilicu" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cmbGrupeRadova" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblId" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtIdValue" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -135,13 +155,11 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
-                      <Component id="cmbGrupeRadova" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="112" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane3" pref="259" max="32767" attributes="0"/>
+                  <Component id="jScrollPane3" pref="271" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -195,15 +213,9 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnObrisiActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtTratziGrupa">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTratziGrupaActionPerformed"/>
-        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTratziGrupaKeyPressed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JLabel" name="lblPretraga">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Pretraga po grupi, kategoriji i cijeni:"/>
+        <Property name="text" type="java.lang.String" value="grupa:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtTraziKategorija">
@@ -325,6 +337,16 @@
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblPretraga1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="kategorija:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblPretraga2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="cijena:"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
