--- a/src/kovacevic/view/FormaRadMaterijal.form
+++ b/src/kovacevic/view/FormaRadMaterijal.form
@@ -234,7 +234,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="btnRadPromjeni">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Promjeni"/>
+                <Property name="text" type="java.lang.String" value="Promijeni"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRadPromjeniActionPerformed"/>
