--- a/src/kovacevic/view/Izbornik.form
+++ b/src/kovacevic/view/Izbornik.form
@@ -41,13 +41,16 @@
                       </Group>
                   </Group>
                   <Component id="btnAnalizaCijene" alignment="0" max="32767" attributes="0"/>
-                  <Component id="btnStavkaTroskovnik" alignment="0" pref="312" max="32767" attributes="0"/>
-                  <Component id="btnEraDijagram" alignment="0" pref="312" max="32767" attributes="0"/>
+                  <Component id="btnStavkaTroskovnik" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnEraDijagram" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace pref="128" max="32767" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
                       <Component id="lblGithub" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="btnUnosRadMaterijal" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnUnosAnalizaCijene" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -77,6 +80,10 @@
                   <Component id="lblGithub" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="btnUnosRadMaterijal" min="-2" pref="40" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="btnUnosAnalizaCijene" min="-2" pref="40" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -174,10 +181,28 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel1"/>
+        <Property name="text" type="java.lang.String" value="Novi raspored"/>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel1MouseClicked"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnUnosRadMaterijal">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Unos rada i materijala"/>
+        <Property name="horizontalTextPosition" type="int" value="0"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUnosRadMaterijalActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnUnosAnalizaCijene">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Unos analize cijene"/>
+        <Property name="horizontalTextPosition" type="int" value="0"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUnosAnalizaCijeneActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
