--- a/src/kovacevic/view/FormaAnalizaMaterijal.form
+++ b/src/kovacevic/view/FormaAnalizaMaterijal.form
@@ -116,7 +116,7 @@
                           <Component id="btnObrisi" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="jScrollPane1" pref="270" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
